added some fixed/changed test-cases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,14 @@ ELSE()
 	MESSAGE(STATUS "JPEG image support: DISABLED")
 ENDIF()
 
+OPTION(WITH_OPENCL "Build with OpenCL support" ON)
+IF(WITH_OPENCL)
+	MESSAGE(STATUS "OpenCL support: ENABLED")
+	add_definitions(-DWITH_OPENCL)
+	SET(EXTRA_LIBS ${EXTRA_LIBS} OpenCL)
+ELSE()
+	MESSAGE(STATUS "OpenCL support: DISABLED")
+ENDIF()
 
 
 FILE(GLOB HEADERS
