worked on openCL - refactoring (factory methods) - added image support - added file-include support - new test-cases - verbose output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ FILE(GLOB SOURCES
 
 ADD_DEFINITIONS(-DWITH_TESTS)
 ADD_DEFINITIONS(-DWITH_ASSERTIONS)
+ADD_DEFINITIONS(-DWITH_VERBOSE)
 
 # system specific compiler flags
 IF(MSVC)
